--- a/index.html
+++ b/index.html
@@ -111,25 +111,16 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2025-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2026, UMacau)
+		[UM CISC7401] Advanced Machine Learning: <a href="./aimerykong_files/2025-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">2026Spring</a>, <a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">2025Spring</a>
 	</li>
 	<li>
-		[CISC3011] Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
+		[UM CISC3011] Digital Image Processing: <a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">2025Fall</a>
 	</li>
 	<li>
-		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2025, UMacau)
-	</li>
+		[UM CISC3027/CISC7014] Visual Perception and Learning in the Open World: <a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank">2024Fall</a>, 2023Fall
+	</li>	
 	<li>
-		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank">syllabus</a>] (Fall 2024, UMacau)
-	</li>
-	<li>
-		[CISC7014] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf"  target="_blank">syllabus</a>] (Spring 2024, UMacau)
-	</li>
-	<li>
-		[CISC3027] Visual Perception and Learning in the Open World (Fall 2023, UMacau)
-	</li>
-	<li>
-	[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU)
+		[TAMU CSCE689] Visual Learning for Visual Recognition: 2023Spring
 	</li>
 </ul>
 
