--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		[UM CISC3011] Digital Image Processing: <a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">2025Fall</a>
 	</li>
 	<li>
-		[UM CISC3027/CISC7014] Visual Perception and Learning in the Open World: <a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank">2024Fall</a>, 2023Fall
+		[UM CISC3027/CISC7014] Visual Perception and Learning in the Open World: <a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank">2024Fall</a>, 2024Spring, 2023Fall
 	</li>	
 	<li>
 		[TAMU CSCE689] Visual Learning for Visual Recognition: 2023Spring
